# ro-fouling-optimizer

./: README.md  app.py  pyproject.toml
core/: data_generator.py  fouling_model.py  fouling_predictor.py  visualizations.py
notebooks/: validation_case.ipynb
