[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ro-fouling-optimizer"
version = "0.1.0"
description = "CIP cleaning frequency optimizer for RO plants based on fouling physics model"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "scikit-learn",
    "jupyter",
]

[tool.setuptools]
packages = ["core"]

[tool.poetry]
package-mode = false